文字水平布局

--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -94,6 +94,15 @@
                 android:background="?android:selectableItemBackground">
             </ImageButton>
 
+            <ImageButton android:id="@+id/align_left"
+                android:contentDescription="@null"
+                android:layout_width="48dp"
+                android:layout_height="48dp"
+                android:src="@drawable/ic_format_align_left"
+                android:scaleType="center"
+                android:background="?android:selectableItemBackground">
+            </ImageButton>
+
             <ImageButton android:id="@+id/align_center"
                 android:contentDescription="@null"
                 android:layout_width="48dp"
@@ -103,11 +112,11 @@
                 android:background="?android:selectableItemBackground">
             </ImageButton>
 
-            <ImageButton android:id="@+id/align_left"
+            <ImageButton android:id="@+id/align_right"
                 android:contentDescription="@null"
                 android:layout_width="48dp"
                 android:layout_height="48dp"
-                android:src="@drawable/ic_format_align_left"
+                android:src="@drawable/ic_format_align_right"
                 android:scaleType="center"
                 android:background="?android:selectableItemBackground">
             </ImageButton>
@@ -126,6 +135,24 @@
                 android:layout_width="48dp"
                 android:layout_height="48dp"
                 android:src="@drawable/ic_format_font_smaller"
+                android:scaleType="center"
+                android:background="?android:selectableItemBackground">
+            </ImageButton>
+
+            <ImageButton android:id="@+id/text_color"
+                android:contentDescription="@null"
+                android:layout_width="48dp"
+                android:layout_height="48dp"
+                android:src="@drawable/ic_format_font_color"
+                android:scaleType="center"
+                android:background="?android:selectableItemBackground">
+            </ImageButton>
+
+            <ImageButton android:id="@+id/background_color"
+                android:contentDescription="@null"
+                android:layout_width="48dp"
+                android:layout_height="48dp"
+                android:src="@drawable/ic_format_font_background"
                 android:scaleType="center"
                 android:background="?android:selectableItemBackground">
             </ImageButton>
