--- a/app/src/main/res/menu/menu_knowledge_editor.xml
+++ b/app/src/main/res/menu/menu_knowledge_editor.xml
@@ -7,23 +7,17 @@
     <item android:id="@+id/undo"
           android:title="@string/menu_undo"
           android:icon="@drawable/ic_action_undo"
-          app:showAsAction="ifRoom">
+          app:showAsAction="always">
     </item>
 
     <item android:id="@+id/redo"
           android:title="@string/menu_redo"
           android:icon="@drawable/ic_action_redo"
-          app:showAsAction="ifRoom">
+          app:showAsAction="always">
     </item>
 
     <item android:id="@+id/view_html"
           android:title="@string/menu_view_html"
           app:showAsAction="ifRoom">
     </item>
-
-    <item android:id="@+id/view_html2"
-        android:title="原版"
-        app:showAsAction="ifRoom">
-    </item>
-
 </menu>
