--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -5,5 +5,17 @@
     <color name="blue_200">#FF90CAF9</color>
     <color name="blue_500">#FF2196F3</color>
     <color name="blue_700">#FF1976D2</color>
+    <color name="white">#ffffff</color>
+    <color name="black">#000000</color>
+    <color name="blue_grey">#607D8B</color>
+    <color name="amber">#FFC107</color>
+    <color name="green">#4CAF50</color>
+    <color name="teal">#009688</color>
+    <color name="indigo">#3F51B5</color>
+    <color name="purple">#9C27B0</color>
+    <color name="red">#F44336</color>
+    <color name="lime">#CDDC39</color>
+    <color name="light_green">#8BC34A</color>
+    <color name="blue">#2196F3</color>
 
 </resources>
